Switched sections margins to paddings to ensure gapis created between element and its children and not element and its parent root div

--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -1,37 +1,10 @@
 /* defined colors */
 @import url("colors.css");
 
-@media (width <= 316px) {
-  body {
-    display: flex;
-    flex-wrap: nowrap;
-    overflow-x: auto;
-    width: 100vw;
-  }
-
-  * {
-    box-sizing: border-box; /* Ensures padding & borders don't increase width */
-  }
-
-  header,
-  main,
-  footer {
-    flex: 1 0 auto;
-    min-width: 100vw;
-  }
-
-  /* Allows to scroll the container of this class in the y axis. */
-  .no-xresize {
-    overflow-x: auto;
-    /* stylelint-disable-next-line declaration-block-no-redundant-longhand-properties -- allows different axis overflows */
-    overflow-y: hidden;
-  }
-}
-
 @media (width <= 740px) {
   .constrain-content {
-    margin-left: 5%;
-    margin-right: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
     height: 100%;
   }
 
@@ -68,8 +41,8 @@
 
 @media (740px < width <= 1200px) {
   .constrain-content {
-    margin-left: 6.72%;
-    margin-right: 6.72%;
+    padding-left: 6.72%;
+    padding-right: 6.72%;
     height: 100%;
   }
 
@@ -106,8 +79,8 @@
 
 @media (width > 1200px) {
   .constrain-content {
-    margin-left: 20.13%;
-    margin-right: 20.13%;
+    padding-left: 20.13%;
+    padding-right: 20.13%;
     height: 100%;
   }
 
@@ -147,7 +120,7 @@ main {
 
 .navigation-bar {
   background-color: #d9d9d9;
-  width: 100vw;
+  width: 100%;
 }
 
 .hero-section {
